[project]
name = "pylookyloo"
version = "1.34.0"
description = "Python CLI and module for Lookyloo"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "GPL-2.0-or-later"
readme = "README.md"
requires-python = ">=3.10"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.5)"
]

[project.urls]
repository = "https://github.com/lookyloo/PyLookyloo"
issues = "https://github.com/lookyloo/PyLookyloo/issues"
documentation = "https://pylookyloo.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
lookyloo = 'pylookyloo:main'

[project.optional-dependencies]
docs = ["Sphinx (>=9.0.4) ; python_version >= \"3.11\""]
examples = ["pylacus (>=1.20.0)"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.0"
types-requests = "^2.32.4.20250913"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
