[project]
name = "pylookyloo"
version = "1.37.1"
description = "Python CLI and module for Lookyloo"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "GPL-2.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.5)",
    "lookyloo-models (>=0.1.1,<0.2.0)",
    "deprecated (>=1.3.1,<2.0.0) ; python_version < \"3.13\""
]

[project.urls]
repository = "https://github.com/lookyloo/PyLookyloo"
issues = "https://github.com/lookyloo/PyLookyloo/issues"
documentation = "https://pylookyloo.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
lookyloo = 'pylookyloo:main'

[project.optional-dependencies]
docs = ["Sphinx (>=9.1.0) ; python_version >= \"3.12\""]
examples = ["pylacus (>=1.22.1)"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"
pytest = "^9.0.2"
types-deprecated = {version="^1.3.1.20260130", markers="python_version < \"3.13\""}

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
